// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`focusBlur 1`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label4
  </span>
</label>
`;

exports[`focusBlur 2`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox is-focus"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label4
  </span>
</label>
`;

exports[`focusBlur 3`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label4
  </span>
</label>
`;
